feat(nip): add pac verification request
