# backend-nip/docs/swagger.yaml
@@ -9,24 +9,53 @@ definitions:
     type: object
   models.PACRequestModel:
     properties:
-      signed_pid:
-        example: signed_pid_payload_base64
+      pid:
+        example: DmIq8x2JNs+E2qGBr16LxP6lUK+i/5nJRLuzvYEymtY=
         type: string
+      signed_pid:
+        example: fzLD1/PAJoq7EtWqIXLOYMhxNJCK9L4w4yniXZSxu0r3+oZ84jreOAhAIlrodSdg0/4EaKYWLmyf0D0uD0eozzwhvVYPDZIrLSxllH+HeEWWuOm1hnPVOOUwo7G4ROemojqwNQ6uvSB+AxoAPiSfm01Rgi0BPoaH9X8H6r94O9Hm3ZrgA9zoxQhMTx/eDpsW2yNbfPFXd18IAuHqLJSCBOSl3U4PfHEad3xFw6H04s2hr3Rqlsb2WsJmS6rf0mPEPAKjq1fSvBIcxg6PCJdfw/GhZEByrP0qc5DllkYSYZaddM/pAh+8LA16YmN1eO9VthsQxGt/WHma/5xsChOaCMd+fgk+Yjio56LoHrC86SqKsS4gkfa2jZoyagwNCah/nKAQkeVzQjk5+WLdCfMh71v82lw9L3rwlng2KhLC4z19k7wheoKQipJaxFR72T7PDftt1TvttK5q6F8x+sV6cTC6roRkgZG03X4tgLJrkBLjF9w3KbcKhPzLyu9ehYtTqFe9hBuR11UXirTi96bvmT9wWDVoTxv+ZGvn59e0VLBcQp67W2m3CZgmIs5eksQPhsFufRwYq49kXxFqnX5OZdqmVVhbQM8X9b8dTpgxd+tIuPzrYcG3ts5ApPCdXMoM/s1Tp6x+QQtq6uOD44V5v5E9tHd9GAH5cYKDfPvdA/w=
+        type: string
+    required:
+    - pid
+    - signed_pid
     type: object
   models.PACResponseModel:
     properties:
-      pac:
-        example: signed_sid_payload_base64
+      expiration:
+        example: "2024-12-31T23:59:59Z"
         type: string
+      pac:
+        example: 874532
+        type: integer
+    type: object
+  models.PACVerificationRequestModel:
+    properties:
+      pac:
+        example: 874532
+        type: integer
+      pid:
+        example: DmIq8x2JNs+E2qGBr16LxP6lUK+i/5nJRLuzvYEymtY=
+        type: string
+    required:
+    - pac
+    - pid
+    type: object
+  models.PACVerificationResponseModel:
+    properties:
+      expiration:
+        example: "2024-12-31T23:59:59Z"
+        type: string
+      valid:
+        example: true
+        type: boolean
     type: object
   models.PIDRequestModel:
     properties:
       public_key:
-        example: |-
-          -----BEGIN PUBLIC KEY-----
-          MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQ...
-          -----END PUBLIC KEY-----
+        example: abc123def456ghci78
         type: string
+    required:
+    - public_key
     type: object
   models.PIDResponseModel:
     properties:
@@ -89,6 +118,10 @@ paths:
           description: Bad request
           schema:
             $ref: '#/definitions/models.ErrorResponseModel'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/models.ErrorResponseModel'
         "500":
           description: An error occurred
           schema:
@@ -128,6 +161,41 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorResponseModel'
       summary: SAC issuance request
+      tags:
+      - auth
+  /v1/auth/verify-pac:
+    post:
+      consumes:
+      - application/json
+      description: Allows a user to verify a PAC (Public Authentication Code) for
+        services accepting an authenticated anonymous identity.
+      parameters:
+      - description: PAC Verification Request Model
+        in: body
+        name: models.PACVerificationRequestModel
+        required: true
+        schema:
+          $ref: '#/definitions/models.PACVerificationRequestModel'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: The Public Authentication Code Verification Response
+          schema:
+            $ref: '#/definitions/models.PACVerificationResponseModel'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/models.ErrorResponseModel'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/models.ErrorResponseModel'
+        "500":
+          description: An error occurred
+          schema:
+            $ref: '#/definitions/models.ErrorResponseModel'
+      summary: PAC verification request
       tags:
       - auth
   /v1/identity/pid:
